[dependencies]
comrak_lib = {package = "comrak", version = "0.50.0", features = ["shortcodes", "phoenix_heex"]}
pyo3 = "0.27.2"

[lib]
name = "comrak"
crate-type = ["cdylib"]

[package]
name = "comrak"
version = "0.1.4"
edition = "2021"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"
